--- a/resume_project/style.css
+++ b/resume_project/style.css
@@ -17,3 +17,30 @@ strong {
   color:#33485e;
   text-transform:uppercase;
 }
+
+img {
+  display: none;
+}
+
+h2 {
+  font-size: 1.5em;
+  text-transform:uppercase;
+  background-color:#33485e;
+  color:white;
+  font-weight:400;
+}
+
+h3 {
+  font-weight:600;
+  font-size:2em;
+}
+
+h4 {
+  font-weight:400;
+  font-size:1.5em;
+}
+
+h5 {
+  font-weight:400;
+  font-size:1em;
+}
